--- a/cluster/package.json
+++ b/cluster/package.json
@@ -19,8 +19,11 @@
   },
   "homepage": "https://github.com/Helique/Cluster#readme",
   "dependencies": {
+    "body-parser": "^1.15.2",
+    "casperjs": "^1.1.2",
     "express": "^4.13.4",
+    "multer": "1.1.0",
     "nunjucks": "^2.3.0",
-    "multer": "1.1.0"
+    "request": "^2.72.0"
   }
 }
