--- a/cluster/package.json
+++ b/cluster/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cluster_engine",
   "version": "1.0.0",
-  "description": "A graph based social app.",
+  "description": "Financial Planning Software",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/Helique/Cluster#readme",
   "dependencies": {
+    "angular": "1.5.8",
     "body-parser": "^1.15.2",
     "casperjs": "^1.1.2",
     "express": "^4.13.4",
