--- a/cluster/package.json
+++ b/cluster/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "angular": "1.5.8",
     "angular-route": "^1.5.8",
+    "async": "^2.1.2",
     "bcrypt": "^0.8.7",
     "body-parser": "^1.15.2",
     "express": "^4.13.4",
