--- a/cluster/package.json
+++ b/cluster/package.json
@@ -4,7 +4,7 @@
   "description": "Financial Planning Software",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "./node_modules/mocha/bin/mocha test/*.js test/*/*.js",
     "start": "node index.js"
   },
   "repository": {
@@ -26,11 +26,17 @@
     "body-parser": "^1.15.2",
     "express": "^4.13.4",
     "express-session": "^1.14.2",
+    "lodash": "^4.17.2",
     "multer": "1.1.0",
     "mysql": "^2.11.1",
     "nunjucks": "^2.3.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "request": "^2.72.0"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "mocha": "^3.1.2",
+    "supertest": "^2.0.1"
   }
 }
