--- a/cluster/package.json
+++ b/cluster/package.json
@@ -4,7 +4,7 @@
   "description": "Financial Planning Software",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/mocha/bin/mocha test/*.js test/*/*.js",
+    "test": "./node_modules/mocha/bin/mocha test/test.js",
     "start": "node index.js"
   },
   "repository": {
